sass/layout/_homepage.scss
.header {
  display: flex;
  justify-content: flex-end;

  @include respond(phone) {
    justify-content: center;
  }
  .logo {
    width: 45rem;
    object-fit: contain;
    padding: 3rem;
    @include respond(phone) {
      height: 11rem;
      padding: 0rem 7rem;
    }

    animation: moveInRight 0.8s;
  }
}

.main-image {
  font-family: "adoveFnt22-bold";
  position: relative;
  width: 100%;
  overflow-y: hidden;
  font-size: 5rem;

  @include respond(mini-desktop) {
    font-size: 4rem;
  }

  @include respond(tab-port) {
    font-size: 3.2rem;
  }

  @include respond(phone) {
    font-size: 4rem;
    object-fit: cover;
    font-size: 4rem;
    object-position: 50%;
    height: 60rem;
  }

  .whiteBackground {
    background-color: $color-white;
    padding: 0 1rem;
    width: fit-content;
    overflow-y: hidden;
  }
  .mainColor-Background {
    background-color: $color-primary;
    padding: 0 1rem;
    width: fit-content;
    overflow-y: hidden;
  }

  &__top-text {
    display: flex;
    position: absolute;
    z-index: 10;
    bottom: 23%;
    right: 50%;
    transform: translate(50%, 0);
    width: fit-content;
    line-height: 8.5rem;
    color: white;
    padding: 0 1rem;
    background: black;

    animation: fadeIn 1.5s;

    @include respond(small-desktop) {
      bottom: 24%;
    }

    @include respond(mini-desktop) {
      line-height: 7.5rem;
    }
    @include respond(tab-port) {
      line-height: 6.5rem;
    }

    @include respond(phone) {
      flex-direction: column;
      align-items: center;
      bottom: 21%;
      line-height: 5rem;
      font-size: 4rem;
      overflow: hidden;
    }
    @include respond(phone-small) {
      line-height: 4rem;
      font-size: 2.3rem;
      width: 85vw;
    }

    &-right {
      overflow-y: hidden;
    }

    &-left {
      overflow-y: hidden;
    }
  }

  &__bottom-text {
    display: flex;
    position: absolute;
    z-index: 10;
    bottom: 10%;
    right: 50%;
    transform: translate(50%, 0);
    overflow-y: hidden;
    width: fit-content;
    line-height: 8.5rem;

    animation: fadeIn 1.5s;

    @include respond(mini-desktop) {
      line-height: 7.5rem;
    }

    @include respond(tab-port) {
      line-height: 6.5rem;
    }

    @include respond(phone) {
      line-height: 5rem;
      font-size: 4rem;
    }

    @include respond(phone-small) {
      line-height: 4rem;
      font-size: 2.3rem;
    }
  }
}

.location-section {
  padding: 10rem 2rem;
  text-align: center;

  @include respond(phone) {
    padding: 7rem 1rem;
  }

  &__text {
    font-size: 7rem;
    line-height: 9rem;
    overflow: hidden;

    & {
      opacity: 0;
      transform: translateY(50%);
      transition: all 0.5s;
      will-change: transform opacity;
    }

    &.is-visible {
      opacity: 1;
      transform: translateY(0%);
    }

    @include respond(mini-desktop) {
      font-size: 4rem;
      line-height: 5rem;
      overflow: hidden;
    }
    @include respond(phone) {
      font-size: 3rem;
      line-height: 4rem;
      overflow: hidden;

      &#first {
        opacity: 1;
        transform: translateY(0%);
      }
    }
    @include respond(phone-small) {
      font-size: 2.7rem;
    }
  }

  &__title {
    font-family: "adoveFnt22-ultrabold";
    display: flex;
    margin: 2rem auto -3rem;
    width: fit-content;
    transition: all 0.2s;

    &:hover {
      transform: scale(1.03);
    }

    @include respond(phone) {
      margin: 2rem auto 0;
    }
    & {
      opacity: 0;
      transform: translateY(50%);
      transition: all 0.5s;
      will-change: transform opacity;
    }

    &.is-visible {
      opacity: 1;
      transform: translateY(0%);
    }

    & h2 {
      font-size: 14rem;
      font-weight: 900;
      margin: 0 1rem;

      @include respond(mini-desktop) {
        font-size: 8.2rem;
      }

      @include respond(phone) {
        font-size: 4rem;
      }
      @include respond(phone-small) {
        font-size: 4rem;
      }

      &.color-blue {
        color: $color-secondary;
      }
    }
  }
}

.contact-us-section {
  font-family: "adoveFnt22-bold";
  padding: 6rem 0 6rem;
  @include respond(phone) {
    padding: 8rem 0 0;

    &#grey {
      padding: 8rem 0;
    }
  }

  & p {
    font-size: 6rem;
    margin-bottom: 4rem;
    @include respond(phone) {
      font-size: 3.5rem;
      margin-bottom: 2rem;
    }
    @include respond(phone-small) {
      font-size: 3rem;
    }
  }

  &-title {
    font-size: 4rem;
    text-align: center;

    &-head {
      font-size: 7rem;
      margin-bottom: 3rem;
      text-align: center;
      @include respond(small-desktop) {
        font-size: 5.8rem;
        line-height: 7rem;
        overflow: hidden;
      }

      @include respond(tab-land) {
        font-size: 5rem;
        line-height: 6rem;
        overflow: hidden;
      }
      @include respond(tab-port) {
        font-size: 3.5rem;
        line-height: 5rem;
        padding: 0 3rem;
        overflow: hidden;
      }
      @include respond(phone-small) {
        font-size: 3rem;
        line-height: 4rem;
      }
    }
  }
  &#grey {
    background-color: $color-grey-light-1;
  }
}
/* ... */

